@@ -76,8 +76,50 @@
         </dependency>
         <dependency>
             <groupId>org.kuali.student.core</groupId>
+            <artifactId>ks-common-ui</artifactId>
+            <version>${ks.core.version}</version>
+						<scope>test</scope>
+            <exclusions>
+              <exclusion>
+                <groupId>com.google.gwt</groupId>
+                <artifactId>gwt-dev</artifactId>
+              </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.kuali.student.core</groupId>
             <artifactId>ks-core-impl</artifactId>
             <version>${ks.core.version}</version>
+						<scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.kuali.student.core</groupId>
+            <artifactId>ks-core-ui</artifactId>
+            <version>${ks.core.version}</version>
+						<scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.kuali.student.lum</groupId>
+            <artifactId>ks-lum-impl</artifactId>
+            <version>${ks.lum.version}</version>
+						<scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.kuali.student.lum</groupId>
+            <artifactId>ks-lum-ui</artifactId>
+            <version>${ks.lum.version}</version>
+						<scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.kuali.student.enroll</groupId>
+            <artifactId>ks-enroll-impl</artifactId>
+            <version>${ks.enroll.version}</version>
+						<scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.kuali.student.enroll</groupId>
+            <artifactId>ks-enroll-ui</artifactId>
+            <version>${ks.enroll.version}</version>
 						<scope>test</scope>
         </dependency>
         <dependency>
@@ -104,7 +146,7 @@
                         -->
                 <configuration>
                     <forkMode>always</forkMode>
-                    <argLine>-Xms256m -Xmx512m</argLine>
+                    <argLine>-XX:MaxPermSize=128m -Xms256m -Xmx1024m</argLine>
                 </configuration>
             </plugin>
         </plugins>
